
	* test/unit/locale_test.cpp: Enhance LocaleTest::collate_facet
	test case to reveal a bug in glibc localization portage.

	* src/c_locale_glibc/c_locale_glibc2.c: Fixed _Locale_strcmp
	and _Locale_strcmp and _Locale_strwcmp implementation to take
	into account buffer size, comparison used to always been done on the
	whole input strings up to the termination character.

2007-02-08  Francois Dumont  <dums@stlport...>

	* stlport/stl/_threads.h, src/locale.cpp: Add missing parenthesis
	in some macro checks thanks Jan Echternash bug report 1653966.

	* test/unit/locale_test.cpp: Made LocaleTest::collate_facet test
	really meaningful even if it requires french locale support for
	part of it.

2007-02-01  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* stlport/stl/config/_solaris.h: __LONG_MAX__ defined on
	64-bits SPARCs. Thanks Aleksey Sanin.

	* stlport/stl/_sparc_atomic.h, stlport/stl/_threads.h: fixes
	for modern SPARCs. Thanks Aleksey Sanin.

2007-01-28  Francois Dumont  <dums@stlport...>

	* stlport/stl/debug/_deque.h: Fix iterator invalidation in erase
	of an iterator range thanks to Steve Lobasso indirect report (bug
	1645657).

	* test/unit/deque_test.cpp: New test case for deque erase methods.
	
2007-01-19  Francois Dumont  <dums@stlport...>

	* stlport/stl/_locale.h, src/locale.cpp: Add throw() specification
	on locale default constructor. Add const qualifier on locale::combine
	method. Fixed combine implementation to correctly combine
	*this with other locale instance.

	* src/locale_impl.h: Removed _get_Locale_impl and
	_copy_Nameless_Locale_impl already defined in stlport/stl/_locale.h.

	* src/locale_impl.cpp: In _Locale_impl::insert add check that we
	are working on 2 different facet instances before substitution.

	* test/unit/locale_test.cpp: Add test case for locale::combine
	method.

2007-01-12  Francois Dumont  <dums@stlport...>

	* c_locale.h, c_locale_dummy.c, c_locale_glibc.c, c_locale_glibc2.c,